<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginMobileNoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="centerCrop"
            android:padding="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_34sdp"
            app:tint="@color/dashboardlightColor"
            android:src="@drawable/logo_black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center"
                android:background="@drawable/layout_broder"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_91"
                    android:textColor="@color/text_colo_black"
                    android:textSize="@dimen/text_input_font_size" />

                <EditText
                    android:id="@+id/et_login_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:background="@color/white_background"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/text_colo_black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cv_loginBtn"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_light"
                android:text="@string/by_continueing_i_accept"
                android:textColor="@color/dashboardlightColor"
                android:textSize="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="@font/opensans_light"
                android:text="@string/terms_of_service"
                android:textColor="@color/dashboardDeepColor"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_above="@id/background"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            app:cardBackgroundColor="@color/button_color"
            app:cardCornerRadius="@dimen/_18sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBtn_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/_continue"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:src="@drawable/ic_right_back"
                    app:tint="@color/white"
                    android:layout_marginLeft="@dimen/_4sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/footer_bg_img" />

    </RelativeLayout>

</FrameLayout>